<?xml version="1.0"?>
<package>
  <name>desistek_saga_control</name>
  <version>0.3.0</version>
  <description>Configuration and launch files to control the Desistek SAGA ROV</description>

  <maintainer email="emre.ege@desistek.com.tr">Emre Ege</maintainer>
  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</maintainer>
  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>

  <author email="emre.ege@desistek.com.tr">Emre Ege</author>
  <author email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>
  <author email="sebastian.scherer2@de.bosch.com">Sebastian Scherer</author>
  <author email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>uuv_control_cascaded_pid</run_depend>
  <run_depend>uuv_thruster_manager</run_depend>
  <run_depend>desistek_saga_description</run_depend>
</package>
